@@ -1,3 +1,8 @@
+2003-04-18  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/pthread/pthread.h: Don't mark pthread_testcancel with
+	__THROW.
+
 2003-04-16  Jakub Jelinek  <jakub@redhat.com>
 
 	* tst-cancel4.c (do_test): Use %zd instead of %d when printing cnt.
